# AdaWindOS

./: .env.example  .gitignore  APU.md  ARCHITECTURE.md  DECISION_ENGINE.md  EXECUTION.md  MEMORY_SYSTEM.md  NOTEBOARD.md  PLAN.md  README.md  RUNTIME_STATE_MACHINE.md  TASK_SCHEMA.md  TOOL_POLICY.md  ULTRAPLAN.md  VOICE_V2.md  docker-compose.yml  pyproject.toml  sandbox.sh  start.bat  start.sh
ada/: SOUL.md  config.py  goose_bridge.py  main.py  state.py  system_prompt.py
ada/agents/: dispatcher.py
ada/apu/: __init__.py  gateway.py  models.py  monitor.py  orchestrator.py  registry.py
ada/decision/: classifier.py  event.py  intent_schema.json  resolver.py  router.py
ada/executive/: critic.py  outbox.py  task_manager.py  validator.py
ada/journal/: logger.py
ada/learning/: loop.py  miner.py  trainer.py
ada/memory/: consolidation.py  context_builder.py  embeddings.py  mcp_server.py  models.py  schema.sql  store.py
ada/noteboard/: renderer.py  server.py
ada/sentinel/: __init__.py  diagnostics.py  gate.py  harness.py  models.py  probe.py  registry.py  report.py  schema.sql
ada/tests/: bench_retrieval.py  conftest.py  test_apu_registry.py  test_forge_pipeline.py  test_tools_handlers.py  test_ultraplan.py  test_validator.py
ada/tools/: core.py  handlers.py  registry.py
ada/ultraplan/: __init__.py  config.py  daemon.py  planner.py  queue.py  reviewer.py  templates.py
ada/voice/: __init__.py  cloud_tts.py  pipeline.py  sesame_tts.py  vibevoice_tts.py  wakeword.py
benchmarks/: longmemeval_bench.py
ui/: app.py  index.html  server.py
(+4 files in other folders)
