[project]
name = "adaos"
version = "0.1.0"
description = "Voice-first autonomous AI operating system"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "pipecat-ai[silero,whisper,kokoro]",
    "faster-whisper>=1.0.0",
    "openwakeword>=0.6.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
    "httpx>=0.27.0",
    "langgraph>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "sounddevice>=0.4.0",
    "pyaudio>=0.2.14",
]

[project.scripts]
ada = "ada.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
